Styled write-address.component and moved to the order summary

--- a/pizza-order-frontend/src/assets/styles/main-content.css
+++ b/pizza-order-frontend/src/assets/styles/main-content.css
@@ -11,7 +11,7 @@
   height: 600px;
   width: 350px;
   border-radius: 16px;
-  box-shadow: 0 0 1px 2px #f17012;
+  box-shadow: 0 0 1px 2px #EB9532;
   background: url(
   data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAIUlEQVQYV2OUlBD7z4AGGEGCz1+8YpCUEGOA0WBB8lUCAPPgEmTu99S8AAAAAElFTkSuQmCC
   ) repeat;
