--- a/pizza-order-frontend/src/components/pizza-tile/pizza-tile.component.html
+++ b/pizza-order-frontend/src/components/pizza-tile/pizza-tile.component.html
@@ -3,5 +3,5 @@
   <img class="pizza-photo" src="{{pizza.photo}}" alt="{{pizza.name}}"/>
   <span class="pizza-price">Price: <strong>{{pizza.price}}</strong></span>
   <span class="pizza-components">Components: {{pizza.components}}</span>
-  <button class="pizza-button" (click)="choosePizza()">Pick me!</button>
+  <button class="orange-empty-button" (click)="choosePizza()">Pick me!</button>
 </div>
