--- a/pizza-order-frontend/src/components/pizza-tile/pizza-tile.component.html
+++ b/pizza-order-frontend/src/components/pizza-tile/pizza-tile.component.html
@@ -1,7 +1,7 @@
 <div class="tile-background">
   <span class="pizza-name">{{pizza.name}}</span>
   <img class="pizza-photo" src="{{pizza.photo}}" alt="{{pizza.name}}"/>
-  <span class="pizza-price">Price: <strong>{{pizza.price}}</strong></span>
+  <span class="pizza-price">Price: <strong>{{pizza.price}} EUR</strong></span>
   <span class="pizza-components">Components: {{pizza.components}}</span>
   <button class="orange-empty-button" (click)="choosePizza()">Pick me!</button>
 </div>
