--- a/pizza-order-frontend/src/components/thank-you/thank-you.component.html
+++ b/pizza-order-frontend/src/components/thank-you/thank-you.component.html
@@ -1,3 +1,3 @@
 <div class="center-group">
-  <span class="title-text">Thank you!</span>
+  <span id="title-text" class="title-text"></span>
 </div>
