--- a/pizza-order-frontend/src/styles.css
+++ b/pizza-order-frontend/src/styles.css
@@ -6,6 +6,11 @@
   src: url('/assets/fonts/panpizza.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'federick-the-great';
+  src: url("/assets/fonts/FrederickatheGreat-Regular.ttf") format('truetype');
+}
+
 body {
   background: #191816;
   overflow-x: hidden;
@@ -18,6 +23,10 @@ body {
   letter-spacing: 4px;
   font-weight: 900;
   font-size: 80px;
+}
+
+.text-orange {
+  color: #EB9532;
 }
 
 .display-none {
