Added sliding animation to order-summary.component

--- a/pizza-order-frontend/src/components/order-summary/order-summary.component.html
+++ b/pizza-order-frontend/src/components/order-summary/order-summary.component.html
@@ -1,5 +1,5 @@
 <div class="center-order">
-  <div class="order-tab">
+  <div class="order-tab order-start-animation">
     <div class="order-details">
       <img class="order-ribbon" src="/assets/images/order-ribbon.png" alt="order-ribbon"/>
       <span class="order-title">Confirm your order:</span>
