--- a/pizza-order-frontend/src/components/order-summary/order-summary.component.css
+++ b/pizza-order-frontend/src/components/order-summary/order-summary.component.css
@@ -83,3 +83,22 @@
   margin-right: 20px;
   width: auto;
 }
+
+.order-start-animation {
+  animation-name: slideUp;
+  animation-duration: 500ms;
+}
+
+@keyframes slideUp {
+  0% {
+    opacity: 0;
+    transform-origin: 50% 0%;
+    transform: scale(0.2) translate(0%, -200%);
+  }
+
+  100% {
+    opacity: 1;
+    transform-origin: 50% 0%;
+    transform: scale(1) translate(0%, 0%);
+  }
+}
