Changed start animation

--- a/pizza-order-frontend/src/components/start-process/start-process.component.html
+++ b/pizza-order-frontend/src/components/start-process/start-process.component.html
@@ -1,3 +1,4 @@
 <div class="center-group">
-  <button #startButton class="orange-button" (click)="startProcess(startButton)">Start process</button>
+  <button id="startButton" class="orange-button" (click)="startProcess()">Start process</button>
+  <button id="hideButton" class="orange-button hidden-button">Start process</button>
 </div>
