--- a/pizza-order-frontend/src/components/start-process/start-process.component.css
+++ b/pizza-order-frontend/src/components/start-process/start-process.component.css
@@ -7,8 +7,28 @@
   animation-fill-mode: forwards;
 }
 
-
 @keyframes buttonClickAnimation {
-  0%   { margin-bottom: 0; }
-  100% { margin-bottom: 1500px; }
+  40% { transform: scale(1) }
+  100% { transform: scale(0) }
+}
+
+.hidden-button {
+  z-index: -1;
+  position: absolute;
+  margin-top: -5px;
+  opacity: 0;
+}
+.hide-button-animation {
+  content: none;
+  animation-name: hideButtonAnimation;
+  animation-duration: 1250ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+@keyframes hideButtonAnimation {
+  0% { transform: scale(1); opacity: 1; z-index: 2}
+  30% { transform: scale(2); opacity: 0; z-index: 2}
+  100% { transform: scale(2); opacity: 0; z-index: 2}
 }
