Moved "Choose Pizza" step to the component "Pizzeria Answered" as it is supposed to be handled by that component and not the "App Component".

--- a/pizza-order-frontend/src/styles.css
+++ b/pizza-order-frontend/src/styles.css
@@ -1,5 +1,6 @@
 @import "assets/styles/main-content.css";
 @import "assets/styles/buttons.css";
+@import "assets/styles/popup.css";
 
 @font-face {
   font-family: 'pan-pizza';
