Fixed all views so that they can respond to the process step change

--- a/pizza-order-frontend/src/components/thank-you/thank-you.component.html
+++ b/pizza-order-frontend/src/components/thank-you/thank-you.component.html
@@ -1,3 +1,7 @@
 <div class="center-group">
   <span id="title-text" class="title-text"></span>
 </div>
+<div *ngIf="showOrderDialog">
+  <div id="greyScreen-2" class="grey-screen"></div>
+  <app-order-summary class="display-dialog"></app-order-summary>
+</div>
