--- a/pizza-order-frontend/src/components/write-address/write-address.component.html
+++ b/pizza-order-frontend/src/components/write-address/write-address.component.html
@@ -1,5 +1,5 @@
 <div class="center-group">
-  <div id="address-tab" class="calling-tab slide-in">
+  <div id="address-tab" class="calling-tab" [ngClass]="{'slide-in':!validAddress ,'slide-out': validAddress}">
     <form #addressForm="ngForm" class="form-group">
         <input type="text" class="form-control" id="name"
                required
@@ -11,7 +11,7 @@
           Name is required
         </div>
 
-        <input type="text" class="form-control" id="phone"
+        <input type="text" class="form-control" id="phone" pattern="^[1-9]\d{2}-\d{3}-\d{3}$"
                required [textMask]="getMask(inputMaskEnum.PHONE)"
                [(ngModel)]="address.phone" name="phone"
                #phone="ngModel" placeholder="Phone"
@@ -56,7 +56,7 @@
           City is required
         </div>
 
-        <input type="text" class="form-control" id="zipCode"
+        <input type="text" class="form-control" id="zipCode" pattern="^\d{2}-\d{3}$"
                required [textMask]="getMask(inputMaskEnum.ZIPCODE)"
                [(ngModel)]="address.zipCode" name="zipCode"
                #zipCode="ngModel" placeholder="Zip Code"
