--- a/pizza-order-frontend/src/components/pizzeria-answered/pizzeria-answered.component.html
+++ b/pizza-order-frontend/src/components/pizzeria-answered/pizzeria-answered.component.html
@@ -22,15 +22,15 @@
         <p id="picked-text" class="tile-hidden">Great! Do you want to pick some extras to your pizza?</p>
       </div>
       <div *ngIf="pickAdditions">
-        <div *ngFor="let addition of additionsMap | keyvalue">
-          <div id="{{addition.key}}-addition" class="conversation-tile tile-hidden bottom-zero tile-answer-start-animation">
-            <p id="{{addition.key}}-addition-paragraph" class="your-answer-option" (click)="chooseAddition(addition.key)">{{addition.value}}</p>
+        <div *ngFor="let addition of additions">
+          <div id="{{addition.id}}-addition" class="conversation-tile tile-hidden bottom-zero tile-answer-start-animation">
+            <p id="{{addition.id}}-addition-paragraph" class="your-answer-option" (click)="chooseAddition(addition)">{{addition.addition}}</p>
           </div>
         </div>
       </div>
       <div *ngIf="additionsPicked" class="conversation-tile">
         <img class="tile-hidden tile-img-start-animation" src="assets/images/waitress.png" alt="waitress">
-        <p class="tile-hidden tile-text-start-animation">I would choose {{data.variables.additions?.toLowerCase()}} too!</p>
+        <p class="tile-hidden tile-text-start-animation">I would choose {{data.variables.additions?.addition.toLowerCase()}} too!</p>
       </div>
       <div *ngIf="delivery" class="conversation-tile">
         <img class="tile-hidden tile-img-start-animation" src="assets/images/waitress.png" alt="waitress">
