Added literals to the database

--- a/pizza-order-frontend/src/components/order-summary/order-summary.component.html
+++ b/pizza-order-frontend/src/components/order-summary/order-summary.component.html
@@ -16,7 +16,7 @@
           <span class="data-text">{{data.variables.pizza.price}} EUR</span>
         </div>
         <div class="data-row">
-          <span class="data-text flex-grow">{{data.variables.additions}}</span>
+          <span class="data-text flex-grow">{{data.variables.additions.addition}}</span>
           <span class="data-text">1</span>
           <span class="data-text">1 EUR</span>
         </div>
