--- a/pizza-order-frontend/src/components/thank-you/thank-you.component.html
+++ b/pizza-order-frontend/src/components/thank-you/thank-you.component.html
@@ -3,5 +3,5 @@
 </div>
 <div *ngIf="showOrderDialog">
   <div id="greyScreen-2" class="grey-screen"></div>
-  <app-order-summary class="display-dialog"></app-order-summary>
+  <app-order-summary [literals]="literals" class="display-dialog"></app-order-summary>
 </div>
