Fixed bug with thank-you displaying

--- a/pizza-order-frontend/src/components/thank-you/thank-you.component.html
+++ b/pizza-order-frontend/src/components/thank-you/thank-you.component.html
@@ -1,5 +1,5 @@
 <div class="center-group">
-  <span id="title-text" class="title-text"></span>
+  <span #titleText class="title-text"></span>
 </div>
 <div *ngIf="showOrderDialog">
   <div id="greyScreen-2" class="grey-screen"></div>
